{
  "version": 4,
  "terraform_version": "1.14.0",
  "serial": 22,
  "lineage": "d514120b-9643-6643-550f-ce2e5614d343",
  "resources": [
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_eip",
      "name": "demo-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00213fedd9c6d48c8",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-00213fedd9c6d48c8",
            "association_id": "eipassoc-05161d21bd36034f4",
            "domain": "vpc",
            "id": "eipalloc-00213fedd9c6d48c8",
            "instance": "i-0217d7520e94d8700",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0a652baba53750a72",
            "private_dns": "ip-10-0-1-95.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.95",
            "public_dns": "ec2-3-0-168-192.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.0.168.192",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.compute.aws_instance.demo-instance",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.compute",
      "mode": "managed",
      "type": "aws_instance",
      "name": "demo-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0e4b5d31e60aa0acd",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:instance/i-0217d7520e94d8700",
            "associate_public_ip_address": false,
            "availability_zone": "ap-southeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0217d7520e94d8700",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "duongcon-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0a652baba53750a72"
              }
            ],
            "primary_network_interface_id": "eni-0a652baba53750a72",
            "private_dns": "ip-10-0-1-95.ap-southeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.95",
            "region": "ap-southeast-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01725b172c57a54cb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0b23d8f138de0e0ce",
            "tags": {
              "Name": "DuongCon Demo EC2 Instance"
            },
            "tags_all": {
              "Name": "DuongCon Demo EC2 Instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00bbc701b189597dc"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "i-0217d7520e94d8700",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "aws_key_pair.duongcon-keypair",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0476873e5657bb202",
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:elastic-ip/eipalloc-0476873e5657bb202",
            "domain": "vpc",
            "id": "eipalloc-0476873e5657bb202",
            "network_border_group": "ap-southeast-1",
            "public_dns": "ec2-3-1-156-147.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "3.1.156.147",
            "public_ipv4_pool": "amazon",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "my_igw",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:internet-gateway/igw-04618329aa68ac092",
            "id": "igw-04618329aa68ac092",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0476873e5657bb202",
            "association_id": "eipassoc-05c32971d94600598",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-085d363ef34ffa05c",
            "network_interface_id": "eni-09606b27a3889fcee",
            "private_ip": "10.0.1.10",
            "public_ip": "3.1.156.147",
            "region": "ap-southeast-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b23d8f138de0e0ce",
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0060a05112ced9bd01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-085d363ef34ffa05c",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0060a05112ced9bd0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0060a05112ced9bd0"
          },
          "dependencies": [
            "module.networking.aws_eip.nat_eip",
            "module.networking.aws_nat_gateway.nat_gateway",
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-04618329aa68ac092",
            "id": "r-rtb-03fbc1d931df415561080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03fbc1d931df41556",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03fbc1d931df41556"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.my_igw",
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-0060a05112ced9bd0",
            "id": "rtb-0060a05112ced9bd0",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "DuongCon Private RTB"
            },
            "tags_all": {
              "Name": "DuongCon Private RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-0060a05112ced9bd0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:route-table/rtb-03fbc1d931df41556",
            "id": "rtb-03fbc1d931df41556",
            "owner_id": "596757758746",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": {
              "Name": "DuongCon Public RTB"
            },
            "tags_all": {
              "Name": "DuongCon Public RTB"
            },
            "timeouts": null,
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "rtb-03fbc1d931df41556",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-052f443e17aff4399",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0060a05112ced9bd0",
            "subnet_id": "subnet-01778b4d71898ee6a"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075d29b2671c4e305",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0060a05112ced9bd0",
            "subnet_id": "subnet-0751c4b44a1d2f620"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_route_table",
            "module.networking.aws_subnet.private_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ab814c9dbe4c0389",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03fbc1d931df41556",
            "subnet_id": "subnet-0b23d8f138de0e0ce"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_1",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08351fe5f39610166",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-03fbc1d931df41556",
            "subnet_id": "subnet-082539e16be5177b0"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.public_route_table",
            "module.networking.aws_subnet.public_subnet_2",
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-01778b4d71898ee6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01778b4d71898ee6a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DuongCon Private Subnet 1"
            },
            "tags_all": {
              "Name": "DuongCon Private Subnet 1"
            },
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-01778b4d71898ee6a",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-0751c4b44a1d2f620",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0751c4b44a1d2f620",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DuongCon Private Subnet 2"
            },
            "tags_all": {
              "Name": "DuongCon Private Subnet 2"
            },
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-0751c4b44a1d2f620",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-0b23d8f138de0e0ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b23d8f138de0e0ce",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DuongCon Public Subnet 1"
            },
            "tags_all": {
              "Name": "DuongCon Public Subnet 1"
            },
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-0b23d8f138de0e0ce",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:subnet/subnet-082539e16be5177b0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-082539e16be5177b0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "596757758746",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DuongCon Public Subnet 2"
            },
            "tags_all": {
              "Name": "DuongCon Public Subnet 2"
            },
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "subnet-082539e16be5177b0",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my_vpc",
      "provider": "module.networking.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:vpc/vpc-04685d84e8480cf70",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0d774b1d7ea84fdac",
            "default_route_table_id": "rtb-0015347bd2b44a015",
            "default_security_group_id": "sg-0ba3dd4ed44374f56",
            "dhcp_options_id": "dopt-03e77db624ee03b31",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04685d84e8480cf70",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0015347bd2b44a015",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "DuongCon Demo VPC"
            },
            "tags_all": {
              "Name": "DuongCon Demo VPC"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "vpc-04685d84e8480cf70",
            "region": "ap-southeast-1"
          }
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-0ee5f2af856538f63",
            "description": "private_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ee5f2af856538f63",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bbc701b189597dc"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-00bbc701b189597dc"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "private_security_group",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-0ee5f2af856538f63",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc",
            "module.security.aws_security_group.public_security_group"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_security_group",
      "provider": "module.security.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:596757758746:security-group/sg-00bbc701b189597dc",
            "description": "public_security_group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00bbc701b189597dc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "public_security_group",
            "name_prefix": "",
            "owner_id": "596757758746",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04685d84e8480cf70"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "596757758746",
            "id": "sg-00bbc701b189597dc",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.my_vpc"
          ]
        }
      ]
    }
  ]
}